force-app/main/default/objects/Organisation_Framework__c/Organisation_Framework__c.object-meta.xml
<CustomObject>
    <description>Junction object to connect Organisation (Account) and Framework - replaces Framework Interests picklist on Account</description>
    <label>Framework Interest</label>
    <nameField>
        <displayFormat>OF-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Framework Interests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>