force-app/main/default/objects/Organisation_Framework__c/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <label>Framework</label>
    <referenceTo>Master_Framework__c</referenceTo>
    <relationshipName>Organisation_Frameworks</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>