force-app/main/default/objects/Organisation_Framework__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Organisation_Frameworks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>